@@ -1,0 +1,1 @@
+class some_class = object val some_val = 0.0 end
