@@ -338,6 +338,10 @@ Next version (4.05.0):
 
 - PR#7427, GPR#959: Don't delete let bodies in Cmmgen (Mark Shinwell)
 
+- GPR#965, PR#7426: Fix fatal error during object compilation (also
+  introduces new [Pfield_computed] and [Psetfield_computed] primitives)
+  (Mark Shinwell)
+
 - PR#7346, GPR#966: Fix evaluation order problem whereby expressions could
   be incorrectly re-ordered when compiling with Flambda.  This also fixes one
   example of evaluation order in the native code compiler not matching the
